my_branch first

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 
-do not add
+This is my_branch get lost
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -90,16 +90,3 @@ akl;sjdfklj
       <div class="wrapper wrapper--narrow">
         <p class="modal__description">We will have an online order system in place soon. Until then, connect with us on any of the platforms below!</p>
       </div>
-
-      <div class="social-icons">
-        <a href="#" class="social-icons__icon"><img src="assets/images/icons/facebook.svg" alt="Facebook"></a>
-        <a href="#" class="social-icons__icon"><img src="assets/images/icons/twitter.svg" alt="Twitter"></a>
-        <a href="#" class="social-icons__icon"><img src="assets/images/icons/instagram.svg" alt="Instagram"></a>
-        <a href="#" class="social-icons__icon"><img src="assets/images/icons/youtube.svg" alt="YouTube"></a>
-      </div>
-    </div>
-    <div class="modal__close">X</div>
-  </div>
-  This is the end of the "modal" reference HTML -->
-</body>
-</html>
